# spec

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SKILL.md  package.json
.claude-plugin/: marketplace.json
.claude/agents/: implement-plan.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/.claude/: settings.json
cli/src/: installer.rs  main.rs  registry.rs
cli/src/commands/: init.rs
commands/: run.md  save.md  share.md
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  generate.rs  init.rs  main.rs  run.rs  save.rs  serve.rs  setup.rs  share.rs  start.rs
crates/core/: Cargo.toml  prompt.md
crates/core/src/: lib.rs  spec_parser.rs  transcript.rs
plugins/save-spec/.claude-plugin/: plugin.json
plugins/save-spec/skills/save/: SKILL.md
plugins/spec/.claude-plugin/: plugin.json
plugins/spec/skills/save/: SKILL.md
plugins/spec/skills/share/: SKILL.md
release/: package.json  tsconfig.json
release/scripts/: native.ts  operations.ts  platforms.ts  release.ts  types.ts
release/spec/: package.json
scripts/: build-release.sh
worker/: package-lock.json  package.json  wrangler.json
worker/migrations/: 0001_create_specs.sql
worker/src/: index.ts
