[package]
name = "workers-spec-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "workers-spec"
path = "src/main.rs"

[dependencies]
workers-spec-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["full", "process"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
nanoid = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
http-body-util = "0.1"
libc = "0.2"

[dev-dependencies]
tower = "0.5"
